<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pdtalertBoxLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="40dp"
    android:background="@color/winshop_dark_blue"
    android:translationZ="180dp"
    android:visibility="visible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.459"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="gone">

    <TextView
        android:id="@+id/pdtCreationEANTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ean"
        android:textColor="@color/winshop_white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pdtCReationAlertBoxAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/winshop_white"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdtCreationEANTextView" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/winshop_white"
        app:layout_constraintBottom_toTopOf="@+id/pdtCReationAlertBoxAmountEditText"
        app:layout_constraintEnd_toEndOf="@+id/pdtCReationAlertBoxAmountEditText"
        app:layout_constraintStart_toStartOf="@+id/pdtCReationAlertBoxAmountEditText" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="2dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/winshop_dark_blue" />

    <Button
        android:id="@+id/pdtCreationAlertCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/winshop_white"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pdtCreationOkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/winshop_white"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pdtCreationAlertCancelButton" />
</androidx.constraintlayout.widget.ConstraintLayout>